# MRTracer

./: CMakeLists.txt  README.md
header/: Object.hpp  PPMImage.hpp  algebra.hpp  camera.hpp  global.hpp  ray.hpp
src/: PPMImage.cpp  main.cpp
